Fixes Active Tasks text size and bottom scrollbar issue with windowResize

--- a/src/fauxton/app/addons/activetasks/assets/less/activetasks.less
+++ b/src/fauxton/app/addons/activetasks/assets/less/activetasks.less
@@ -2,5 +2,5 @@
   cursor: pointer;
 }
 table.active-tasks{
-	font-size: 12px;
+	font-size: 16px;
 }
